--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -35,7 +35,7 @@
     "click here to request another": "pulsa aquí para que te enviemos otro",
     "All rights reserved.":  "Todos los derechos reservados.",
     "Whoops! Something went wrong.": "¡Ups! Algo ha ido mal.",
-    "Dashboard": "Panel de control",
+    "Dashboard": "Prestamos",
     "Manage Account": "Gestionar cuenta",
     "Profile": "Perfil",
     "Log Out": "Cerrar sesión",
