--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -57,5 +57,7 @@
     "This device": "Este dispositivo",
     "Unknown": "Desconocido",
     "Last active": "Última actividad",
-    "This password does not match our records.": "Esta contraseña no coincide con nuestros registros."
+    "This password does not match our records.": "Esta contraseña no coincide con nuestros registros.",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "¿Has olvidado tu contraseña? No hay problema. Simplemente dinos tu dirección de correo electrónico y te enviaremos un enlace para restablecer la contraseña que te permitirá elegir una nueva.",
+    "Email Password Reset Link": "Enviar enlace para restablecer contraseña"
 }
